rust_ggml/ffi_ggml/src/ggml_bindings.rs

#[test]
fn bindgen_test_layout_ggml_opt_context_lbfgs_context() {
    assert_eq!(
        ::std::mem::size_of::<ggml_opt_context_lbfgs_context>(),
        104usize,
        concat!("Size of: ", stringify!(ggml_opt_context_lbfgs_context))
    );
    assert_eq!(
        ::std::mem::align_of::<ggml_opt_context_lbfgs_context>(),
        8usize,
        concat!("Alignment of ", stringify!(ggml_opt_context_lbfgs_context))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).x as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).xp as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(xp)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).g as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(g)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).gp as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(gp)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).d as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(d)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).pf as *const _ as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(pf)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).lmal as *const _ as usize
        },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(lmal)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).lmys as *const _ as usize
        },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(lmys)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).lms as *const _ as usize
        },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(lms)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).lmy as *const _ as usize
        },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(lmy)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).fx_best as *const _ as usize
        },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(fx_best)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).step as *const _ as usize
        },
        84usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(step)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).j as *const _ as usize
        },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(j)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).k as *const _ as usize
        },
        92usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(k)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).end as *const _ as usize
        },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(end)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context_lbfgs_context>())).n_no_improvement as *const _
                as usize
        },
        100usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context_lbfgs_context),
            "::",
            stringify!(n_no_improvement)
        )
    );
}
#[test]
fn bindgen_test_layout_ggml_opt_context() {
    assert_eq!(
        ::std::mem::size_of::<ggml_opt_context>(),
        312usize,
        concat!("Size of: ", stringify!(ggml_opt_context))
    );
    assert_eq!(
        ::std::mem::align_of::<ggml_opt_context>(),
        8usize,
        concat!("Alignment of ", stringify!(ggml_opt_context))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_context>())).ctx as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context),
            "::",
            stringify!(ctx)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_context>())).params as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context),
            "::",
            stringify!(params)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_context>())).iter as *const _ as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context),
            "::",
            stringify!(iter)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_context>())).nx as *const _ as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context),
            "::",
            stringify!(nx)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_context>())).just_initialized as *const _ as usize
        },
        144usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context),
            "::",
            stringify!(just_initialized)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_context>())).loss_before as *const _ as usize },
        148usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context),
            "::",
            stringify!(loss_before)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_context>())).loss_after as *const _ as usize },
        152usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context),
            "::",
            stringify!(loss_after)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_context>())).adam as *const _ as usize },
        160usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context),
            "::",
            stringify!(adam)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_context>())).lbfgs as *const _ as usize },
        208usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_context),
            "::",
            stringify!(lbfgs)
        )
    );
}
extern "C" {
    pub fn ggml_opt_default_params(type_: ggml_opt_type) -> ggml_opt_params;
}
extern "C" {
    pub fn ggml_opt(
        ctx: *mut ggml_context,
        params: ggml_opt_params,
        f: *mut ggml_tensor,
    ) -> ggml_opt_result;
}
extern "C" {
    pub fn ggml_opt_init(
        ctx: *mut ggml_context,
        opt: *mut ggml_opt_context,
        params: ggml_opt_params,
        nx: i64,
    );
}
extern "C" {
    pub fn ggml_opt_resume(
        ctx: *mut ggml_context,
        opt: *mut ggml_opt_context,
        f: *mut ggml_tensor,
    ) -> ggml_opt_result;
}
extern "C" {
    pub fn ggml_opt_resume_g(
        ctx: *mut ggml_context,
        opt: *mut ggml_opt_context,
        f: *mut ggml_tensor,
        gf: *mut ggml_cgraph,
        gb: *mut ggml_cgraph,
        callback: ggml_opt_callback,
        callback_data: *mut ::std::os::raw::c_void,
    ) -> ggml_opt_result;
}
extern "C" {
    pub fn ggml_set_input(tensor: *mut ggml_tensor);
}
extern "C" {
    pub fn ggml_set_output(tensor: *mut ggml_tensor);
}
extern "C" {
    pub fn ggml_quantize_init(type_: ggml_type);
}
extern "C" {
    pub fn ggml_quantize_free();
}
extern "C" {
    pub fn ggml_quantize_requires_imatrix(type_: ggml_type) -> bool;
}
extern "C" {
    pub fn ggml_quantize_chunk(
        type_: ggml_type,
        src: *const f32,
        dst: *mut ::std::os::raw::c_void,
        start: i64,
        nrows: i64,
        n_per_row: i64,
        imatrix: *const f32,
    ) -> size_t;
}
pub const gguf_type_GGUF_TYPE_UINT8: gguf_type = 0;
pub const gguf_type_GGUF_TYPE_INT8: gguf_type = 1;
pub const gguf_type_GGUF_TYPE_UINT16: gguf_type = 2;
pub const gguf_type_GGUF_TYPE_INT16: gguf_type = 3;
pub const gguf_type_GGUF_TYPE_UINT32: gguf_type = 4;
pub const gguf_type_GGUF_TYPE_INT32: gguf_type = 5;
pub const gguf_type_GGUF_TYPE_FLOAT32: gguf_type = 6;
pub const gguf_type_GGUF_TYPE_BOOL: gguf_type = 7;
pub const gguf_type_GGUF_TYPE_STRING: gguf_type = 8;
pub const gguf_type_GGUF_TYPE_ARRAY: gguf_type = 9;
pub const gguf_type_GGUF_TYPE_UINT64: gguf_type = 10;
pub const gguf_type_GGUF_TYPE_INT64: gguf_type = 11;
pub const gguf_type_GGUF_TYPE_FLOAT64: gguf_type = 12;
pub const gguf_type_GGUF_TYPE_COUNT: gguf_type = 13;
pub type gguf_type = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct gguf_context {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct gguf_init_params {
    pub no_alloc: bool,
    pub ctx: *mut *mut ggml_context,
}
